--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "npm run export && git add -A && git commit -m 'Deploy website' && git push"
   },
   "dependencies": {
+    "lucide-react": "^0.540.0",
     "next": "15.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0"
