--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,10 +44,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build with Next.js
-        run: npm run build
-
-      - name: Export static files
+      - name: Build and export
         run: npm run export
 
       - name: Upload artifact
