feat: add secure environment variable configuration
- Add .env.example template for Google Analytics integration
- Update .gitignore to protect sensitive environment variables
- Prepare for GDPR-compliant analytics implementation

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,6 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
 
 # vercel
 .vercel
@@ -39,3 +37,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Environment variables
+.env*.local
+.env.production
+
+# Local development
+.env.local
