--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Next.js to GitHub Pages
+name: Deploy TransformerLabs to GitHub Pages
 
 on:
   push:
@@ -44,7 +44,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build and export
+      - name: Build TransformerLabs with Analytics
+        env:
+          NEXT_PUBLIC_GA_ID: G-DQ0NDRJWQP
+          NEXT_PUBLIC_ENVIRONMENT: production
         run: npm run export
 
       - name: Upload artifact
